fixed letter spacing issue on prod

--- a/src/components/BattleUI/style.css
+++ b/src/components/BattleUI/style.css
@@ -1,6 +1,3 @@
-.text-outline {
-  /* color: black;
-  font-family: "Arial";
-  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-  /* -webkit-text-stroke: 1.5px black; */
+body {
+  letter-spacing: 0px;
 }
